Don't use writePathEntry("Exec"), see -r730817 kservice.cpp. Otherwise after a few iterations I get Exec[$e]=$$$$$$$$HOME/bin/myscript...

With this fix, KPropertiesDialog finds an already-created .desktop file when typing the same script name twice.
BUG: 119263

svn path=/trunk/KDE/kdelibs/; revision=782227